--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1"
   }
 }
